--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,6 +12,8 @@ beautifulsoup4 = "^4.11.1"
 pytz = "^2022.7.1"
 Flask = "^2.2.2"
 replit = "^3.2.5"
+bs4 = "^0.0.1"
+Pillow = "^10.0.0"
 
 [tool.poetry.dev-dependencies]
 
