--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,6 +14,8 @@ Flask = "^2.2.2"
 replit = "^3.2.5"
 bs4 = "^0.0.1"
 Pillow = "^10.0.0"
+"discord.py" = "^2.3.2"
+requests = "^2.31.0"
 
 [tool.poetry.dev-dependencies]
 
